# fastapi_cryptowallet

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
.github/workflows/: ci.yaml
app/: main.py
app/api/: __init__.py  routes.py
app/api/home/: __init__.py  home.py
app/api/users/: __init__.py  auth.py  profile.py
app/api/wallets/: __init__.py  checker.py  transactor.py  wallet.py
app/core/: database.py  settings.py
app/external_services/: __init__.py  email.py  liquid.py
app/models/: __init__.py  user.py  wallet.py
app/repositories/: __init__.py  base.py  user.py  wallet.py
app/schemas/: auth_scheme.py  checker_scheme.py  transactor_scheme.py  user_scheme.py  verify_scheme.py  wallet_scheme.py
app/services/: __init__.py  actions.py  auth.py  permissions.py
app/utils/: security.py
celery_tasks/: tasks.py
migrations/: env.py
templates/: email.html  reset.html
tests/: conftest.py  user_test.py  wallet_test.py
